--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -102,7 +102,7 @@
                 <div class="grid_24">
                     <h1 class="sign">
                         <a href="{% url 'template_view' 'index' %}">
-                            <img src="{% static 'images/patrodent_logo_horizontal.png' %}" alt="Clínica dental Patrodent" title="Clínica dental Patrodent">
+                            <img src="{% static 'images/patrodent_logo_horizontal.jpg' %}" alt="Clínica dental Patrodent" title="Clínica dental Patrodent">
                         </a>
                     </h1>
                     <div class="fright">
@@ -130,9 +130,36 @@
                                 <div class="whatssap noLinkWhatsapp"> <span>
                                     <a href="https://wa.me/34618245151?text=Hola%20quisiera%20hacerle%20una%20consulta%20">
                                         <i class="fab fa-whatsapp" style="font-size: 26px;" alt="whatssap"></i></a></span></div></div>
-                            Horario: L - J 16:00 a 21:00 <br/> <span class="fridaytime">V 9:00 a 14:00</span>
+                            <span class="openTime"> Horario: L - J 16:00 a 21:00 <br/> <span class="fridaytime">V 9:00 a 14:00</span></span>
                         </div>
                         <div class="clear"></div>
+                    </div>
+                    <div class="movileContact">
+                        <div class="tel"><a class="phone" href="tel:618245151"></i>618 24 51 51</a>
+                                <div class="whatssap noLinkWhatsapp"> <span>
+                                    <a href="https://wa.me/34618245151?text=Hola%20quisiera%20hacerle%20una%20consulta%20">
+                                        <i class="fab fa-whatsapp" style="font-size: 26px;" alt="whatssap"></i></a></span></div>
+                        </div>
+                        <div class="cita">
+                            <a class="btn btn-cita" target="_blank" href="https://reservas.doctoralia.es/book.php?type=doctor&lang=es&id=24230&utm_source=widget-doctor-24230#highlight-calendar">
+                                    <i class="fas fa-calendar-alt" style="font-size: 16px" alt="icono calendario"></i>
+                                    Pedir cita
+                            </a>
+                        </div>
+                        <div class="social">
+                            <ul class="socialheader">
+                                    <li>
+                                        <a href="https://www.instagram.com/clinicadentalpatrodent/" target="_blank"><i class="fab fa-instagram" title="Instagram" alt="Instagram"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.facebook.com/patrodent.patrodent" target="_blank"><i class="fab fa-facebook" title="Facebook" alt="Facebook"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://linkedin.com/in/patrodent-clínica-dental-a589ab111" target="_blank"><i class="fab fa-linkedin" title="linkedin" alt="linkedin"></i></a>
+                                    </li>
+                                     <li><a href="https://twitter.com/@patrodent_" target="_blank"><i class="fab fa-twitter" title="twitter" alt="twitter"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="Menu">
                         <nav class="navigation">
@@ -188,6 +215,13 @@
                     <div class="clear"></div>
                 </div>
                 <div class="clear"></div>
+            </div>
+        </div>
+        <div class="addressinfo">
+            <div class="main">
+                <span class="openTime"><i class="fas fa-clock"></i> Lunes a Jueves 16:00 a 21:00 Viernes 9:00 a 14:00</span>
+                <span class="location"><i class="fas fa-map-marker-alt"></i> C\Marques de Paradas 22 - 1º dcha 41001, Sevilla</span>
+                <span class="mail"><i class="fas fa-envelope"></i> info@patrodent.com</span>
             </div>
         </div>
     </header>
