--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -88,7 +88,7 @@
                 </ul>
             </li>
             <li class="treatments">
-                <a href="{% url 'template_view' "tratamientos" %}" class="{% block class-tratamientos-link2 %}{% endblock %}">Excelencia</a>
+                <a href="{% url 'template_view' "tratamientos" %}" class="{% block class-tratamientos-link2 %}{% endblock %}">Tratamientos</a>
                 <ul>
                     {% include "templates/inc.tratamientos.html" %}
                 </ul>
@@ -186,7 +186,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="{% url 'template_view' "tratamientos" %}" class="{% block class-tratamientos-link %}{% endblock %}">Excelencia</a>
+                                        <a href="{% url 'template_view' "tratamientos" %}" class="{% block class-tratamientos-link %}{% endblock %}">Tratamientos</a>
                                         <ul style="width:250px">
                                             {% include "templates/inc.tratamientos.html" %}
                                         </ul>
@@ -219,7 +219,8 @@
         </div>
         <div class="addressinfo">
             <div class="main">
-                <span class="openTime"><i class="fas fa-clock"></i> Lunes a Jueves 16:00 a 21:00 Viernes 9:00 a 14:00</span>
+                <span class="openTime"><i class="fas fa-clock"></i> L a J 16:00 a 21:00 V
+                    9:00 a 14:00</span>
                 <span class="location"><i class="fas fa-map-marker-alt"></i> C\Marques de Paradas 22 - 1º dcha 41001, Sevilla</span>
                 <span class="mail"><i class="fas fa-envelope"></i> info@patrodent.com</span>
             </div>
