--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -25,10 +25,23 @@
                     </figure>
                     <div class="clear"></div>
                     <div class="map-margin">
-                     <p>Nuestra clínica se encuentra en pleno centro de Sevilla. En la calle Marqués de Paradas frente al ambulatorio de la Seguridad Social. A 100 metros se encuentra el centro comercial Plaza de Armas en el cual hay un aparcamiento público abierto las 24 horas. A 150 metros está situada la Estación de Autobuses Plaza de Armas de donde parten autobuses para la parte norte y oeste de la provincia de Sevilla, así como a Madrid y otras rutas importantes.</p>
-                    <p>Para llegar y volver en autobús pueden coger las líneas: B2 ,B5, C3, C4, 43, 40</p>
-                    <p>Para volver en taxi puede cogerlo en una parada de taxis a 30 metros de la clínica en la misma acera</p>
-                    <p>Muy cerca de nosotros se encuentra el Corte Inglés de la Magdalena así como numerosas tiendas de moda.</p>
+                        <h4>Dirección:</h4>
+                        <p><i class="fas fa-map-marker-alt"></i> C/Marqués de Paradas nº22 1º dcha, 41001 Sevilla
+                        <h4>Cómo llegar:</h4>
+                        <p><i class="fas fa-parking"></i> Parking: Centro Comercial Plaza de Armas abierto 24h a 100metros de la clinica</p>
+                        <p><i class="fa fa-taxi"></i> Taxi: Parada de taxis a 30 metros de la clínica.
+                        <p><i class="fa fa-subway"></i> Metro: Linea 1</p>
+                        <p><i class="fa fa-bus"></i> Autobús: 03, 06, 1110, 1422, 1780</p>
+                        <p><i class="fa fa-train"></i> Cercanías: C1, C5</p></p>
+                        <h4>Datos de contacto:</h4>
+                        <p><i class="fas fa-envelope"></i> Mail: info@patrodent.com</p>
+                        <p><i class="fa fa-phone-alt"></i> Teléfono y Whatssap: <span class="whatssap noLinkWhatsapp">
+                            <a href="https://wa.me/34618245151?text=Hola%20quisiera%20hacerle%20una%20consulta%20">
+                            <i class="fab fa-whatsapp" alt="whatssap"></i></a></span><a href="tel:34618245151">618245151</a>
+                        </p>
+                        <h4>Horario:</h4>
+                        <p><i class="fas fa-clock"></i>: L-J 16.00h a 21.00h</p>
+                        <p><i class="fas fa-clock"></i>: V 9.00h a 14h </p>
                     </div>
                 </div>
             </div>
