--- a/v2/patrodent/templates/templates/formulario-contacto.html
+++ b/v2/patrodent/templates/templates/formulario-contacto.html
@@ -87,7 +87,7 @@
         <div class="fieldcontainer thebuttons">
             <div class="currentPage1 currentPageActive">
                 <div class="buttons-wrapper">
-                    <a class="button" data-type="submit">Contacta con nosotros</a>
+                    <a class="button" data-type="submit">Enviar</a>
                 </div>
             </div>
         </div>
