--- a/v2/patrodent/templates/templates/tratamiento.html
+++ b/v2/patrodent/templates/templates/tratamiento.html
@@ -28,7 +28,7 @@
                     <div class="alpha grid_23">
                         <div class="indent-l">
                             <div>
-                                <div class="title"><a href="{% url 'template_view' "tratamientos" %}">Excelencia</a></div>
+                                <div class="title"><a href="{% url 'template_view' "tratamientos" %}">Tratamientos</a></div>
                                 <ul class="list-1 columns3">
                                     {% include "templates/inc.tratamientos.html" %}
                                 </ul>
