--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -38,7 +38,6 @@
                 <div class="slider-wrapper">
                     <div class="slider">
                         <ul class="items">
-                            <li><img src="{% static 'images/logo-galeria.png' %}" alt=""></li>
                             <li><img src="{% static 'images/patrocinio_y_angela.jpg' %}" alt=""></li>
                             <li><img src="{% static 'images/sala_de_esperas.jpg' %}" alt=""></li>
                             <li><img src="{% static 'images/recepcion3.jpg' %}" alt=""></li>
@@ -51,7 +50,6 @@
                             <li><a href="#"><span>3</span></a></li>
                             <li><a href="#"><span>4</span></a></li>
                             <li><a href="#"><span>5</span></a></li>
-                            <li><a href="#"><span>6</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -61,19 +59,20 @@
     <div class="wrapper home3colums">
         <div class="grid_7">
             <img src="{% static 'images/logo_1982_green.png' %}" class="tip-logo" alt="1982">
-            <h4 class="p3"><a href="{% url 'template_view' "nuestra-historia" %}">Tu clínica de confianza desde 1982</a></h4>
-            <p>Creemos en la tradición del trato cercano y la excelencia clínica.</p>
+            <h4><a href="{% url 'template_view' "nuestra-historia" %}">Tu clínica de confianza desde 1982</a></h4>
+            <p class="text-1">Mantenemos la filosofía del trato cercano y familiar. </p>
+            <p class="text-1">La tradición y la experiencia se unen para ofrecerte el mejor servicio</p>
         </div>
         <div class="grid_7 center">
             <img src="{% static 'images/logo_finanza_green.png' %}" alt="Finanzciación">
-            <h4 class="p3"><a href="{% url 'template_view' "financiacion" %}">Financiación a tu medida</a></h4>
-            <p class="p3">Contamos con un sistema de financiación, que le será totalmente de su agrado. </p>
+            <h4><a href="{% url 'template_view' "financiacion" %}">Financiación a tu medida</a></h4>
+            <p class="text-1">Contamos con un sistema de financiación adaptado a las necesidades individuales de cada paciente que le permitirá acceder al tratamiento médico que requiere de manera directa. </p>
         </div>
 
         <div class="grid_7">
             <img src="{% static 'images/logo_materiales_premium.png' %}" class="tip-logo" alt="materiales premium">
-            <h4 class="p3">Solo materiales Premium</h4>
-            <p class="p3">Trabajamos con materiales de alta gama, así como con laboratorios de prótesis dental de primer nivel.</p>
+            <h4 class>Excelencia</h4>
+            <p class="p3">Trabajamos sólo con materiales de alta gama y nuestras instalaciones cuentan con todas las comodidades para ofrecer un diagnóstico avanzado de todos nuestros casos.</p>
         </div>
     </div>
 {% endblock %}
