--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -93,6 +93,8 @@
                     {% include "templates/inc.tratamientos.html" %}
                 </ul>
             </li>
+            <li class="beforeAfter"><a href="{% url 'template_view' "antes-y-despues" %}">Casos Clínicos</a></li>
+{#            <li class="blog"><a href="">Blog</a></li>#}
         </ul>
     </nav>
     <header>
@@ -191,23 +193,8 @@
                                             {% include "templates/inc.tratamientos.html" %}
                                         </ul>
                                     </li>
-{#                                    <li>#}
-{#                                        <a href="">Blog</a>#}
-{#                                    </li>#}
-{#                                    <li>#}
-{#                                        <a href="{% url 'template_view' "contacto" %}" class="{% block class-contacto-link %}{% endblock %}">Contacto</a>#}
-{#                                        <ul>#}
-{#                                            <li class="hideWhatsapp">#}
-{#                                                <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>#}
-{#                                            </li>#}
-{#                                            <li>#}
-{#                                                <a href="https://www.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>#}
-{#                                            </li>#}
-{#                                            <li>#}
-{#                                                <a href="https://www.instagram.com/clinicadentalpatrodent/" target="_blank">Instagram</a>#}
-{#                                            </li>#}
-{#                                        </ul>#}
-{#                                    </li>#}
+                                    <li><a class="{% block class-antes-despues-link %}{% endblock %}" href="{% url 'template_view' "antes-y-despues" %}">Casos Clínicos</a></li>
+{#                                    <li class="blog"><a href="">Blog</a></li>#}
                                 </ul>
                             {% endblock %}
                         </nav>
@@ -263,7 +250,7 @@
                                 </div>
                             </div>
                             <div class="grid_7 omega contact_info">
-                                <div class="footer-title"><a href="{% url 'template_view' "contacto" %}">Localización</a></div>
+                                <div class="footer-title"><a class="btn" href="{% url 'template_view' "contacto" %}">Contacto</a></div>
                                 <div id="footermap">
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2241.518966954089!2d-6.002534633885874!3d37.390150981440264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126c127b462e0f%3A0xcebc2c2e1156dfdd!2sCl%C3%ADnica%20Dental%20PATRODENT%20en%20Sevilla%20-%20Odontolog%C3%ADa%20Avanzada!5e0!3m2!1ses!2ses!4v1583685844082!5m2!1ses!2ses" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                                 </div>
